--- a/Mpps-frontend/package.json
+++ b/Mpps-frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
     "bootstrap": "^5.3.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
