--- a/Mpps-frontend/package.json
+++ b/Mpps-frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.10.2",
+    "react-datepicker": "^7.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-map-gl": "^7.1.7",
