--- a/Mpps-frontend/package.json
+++ b/Mpps-frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
+    "@reduxjs/toolkit": "^2.2.5",
     "bootstrap": "^5.3.3",
     "mapbox-gl": "^3.3.0",
     "prop-types": "^15.8.1",
@@ -21,7 +22,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-map-gl": "^7.1.7",
-    "react-router-dom": "^6.22.3"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.22.3",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
